# llm

./: .gitignore  LICENSE  README.md  ch05.ipynb  gpt-kv.ipynb  lora_on_device.ipynb  moe_mixture_of_experts.ipynb  pyproject.toml  requirements.txt
articles/: backward-optimizer.md  llm-training-pipeline.md
