[project]
name = "gpt-kv-cache"
version = "1.0.0"
description = "A from-scratch GPT implementation with KV Cache — educational walkthrough"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jerry Kuru", email = "jerrykuru@gmail.com"},
]
keywords = ["gpt", "transformer", "kv-cache", "deep-learning", "educational"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "tiktoken>=0.5.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.urls]
Repository = "https://github.com/jkuru/llm"

[tool.hatch.build.targets.wheel]
packages = []
